# Hajime-evidence

./: .env.example  README.md  pyproject.toml
app/: database.py  main.py
app/db/: models.py  schemas.py
app/service/: solana_service.py
app/utils/: common.py  x_auth.py
